# city-mail-optimizer

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  main.py  pyproject.toml
notebooks/: Mail Delivery Optimisation.ipynb  Traveling Salesman.ipynb
notebooks/.ipynb_checkpoints/: Traveling Salesman-checkpoint.ipynb
src/: main.py
src/city_mail/: OsmStreetsGraphAdapter.py  PathOptimizerService.py  addresses_data_adapter.py  file_path_utils.py  osm_streets_graph_adapter.py  path_optimizer_service.py  visualization_utils.py
src/city_mail/cli/: optimize_path.py
src/city_mail/dashboard/: app.py
src/city_mail/delivery_optimizer/: addresses_data_adapter.py  osm_streets_graph_adapter.py  path_optimizer_service.py
src/city_mail/navigation/: graph_path_navigator.py
src/city_mail/utils/: file_path_utils.py  visualization_utils.py
