[project]
name = "city-mail-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.2",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "osmnx>=1.9.4",
    "pydantic>=2.10.1",
    "scikit-learn>=1.5.1",
    "typer>=0.14.0",
]

[project.scripts]
city-mail-optimizer = "city_mail.cli.optimize_path:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"